[package]
name = "rustdingtalk"
version = "0.1.0"
authors = ["chenyang <cywhoyi@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/you/rustdingtalk"
repository = "https://github.com/you/rustdingtalk"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
actix-web = "1.0.0"
actix-rt = "*"
derive_more = "0.14.0"
futures = "0.1.23"
rand = "0.5.4"
env_logger = "0.6"
hyper = "0.12.30"

reqwest = "0.9.4"

serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0"
job_scheduler = "*"